--- a/index.html
+++ b/index.html
@@ -108,12 +108,12 @@
                 <li><span>Call:</span> +92 5267-214-392</li>
                 <li><span>Email:</span>abdulla.abdulbasit2024@gmail.com</li>
             </ul>
-            <ul class="sidebar-social">
+            <!-- <ul class="sidebar-social">
                 <li><a href="#"><i class="lab la-facebook-f"></i></a></li>
                 <li><a href="#"><i class="lab la-twitter"></i></a></li>
                 <li><a href="#"><i class="lab la-youtube"></i></a></li>
                 <li><a href="#"><i class="lab la-behance"></i></a></li>
-            </ul>
+            </ul> -->
         </div>
     </div>
     <!--/.sidebar-area-->
