Img problem solved

--- a/pricing.html
+++ b/pricing.html
@@ -47,7 +47,7 @@
             <div class="navigation-wrapper">
                 <div class="navigation-inner">
                     <div class="site-logo">
-                        <a href='index.html'><img src="assets/img/logo of webwiz (3).webp" alt="Webwiz"></a>
+                        <a href='index.html'><img src="assets/img/logo-webwiz.png" alt="Webwiz"></a>
                     </div>
                     <nav class="navigation-menu">
                         <ul class="main-menu">
